# diplom_mobile

./: .gitignore  README.md  pyproject.toml
litres/models/: app.py
litres/models/data/: data_profile.py  data_search_book_app.py
litres/models/pages/: genre_page_app.py  home_page_app.py  profile_page_app.py  search_page_app.py
tests/: conftest.py
tests/android/: test_litres.py
utils/: attach.py  path.py
